syntax = "proto3";

package technology;
option go_package="./pb";

message Empty {}

service technology {
    rpc Insert (TechnologyInfo) returns (InsertResp);
    rpc Delete (DeleteReq) returns (Empty);
    rpc Update (TechnologyInfo) returns (Empty);
    rpc FindOneById (FindOneByIdReq) returns (TechnologyInfo);
    rpc FindListByWorkshop (FindListByWorkshopReq) returns (TechnologyList);
    rpc FindListByEnterprise (FindListByEnterpriseReq) returns (TechnologyList);
}

message TechnologyInfo {
    int64  Id           = 1;
    int64  EnterpriseId = 2;
    int64  WorkshopId   = 3;
    string Name         = 4;
    string Info         = 5;
    string Remark       = 6;
    int64  Version      = 7;
}

message InsertResp {
    int64 Id = 1;
}

message DeleteReq {
    int64 Id = 1;
}

message FindOneByIdReq {
    int64 Id = 1;
}

message FindListByWorkshopReq {
    int64 EnterpriseId = 1;
    int64 WorkshopId   = 2;
    int32 PageSize     = 3;
    int32 PageNumber   = 4;
}

message FindListByEnterpriseReq {
    int64 EnterpriseId = 1;
    int32 PageSize     = 2;
    int32 PageNumber   = 3;
}

message TechnologyList {
    int64                   Count = 1;
    repeated TechnologyInfo List  = 2;
}